--- a/style.css
+++ b/style.css
@@ -1,4 +1,35 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
 *  {
     margin: 0;
     padding: 0;
+    list-style-type: none;
+    text-decoration: none;
 }
+
+body {
+    background-color: #101728;
+}
+
+.header {
+    padding: 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #101728;
+    font-family: "Kanit", sans-serif;
+    color: white;
+    height: 60px;
+}
+
+.header-left {
+    margin-left: 150px;
+    font-size: 18px;
+}
+
+ul {
+    display: flex;
+    gap: 20px;
+    margin-right: 150px;
+}
+
