--- a/style.css
+++ b/style.css
@@ -7,29 +7,42 @@
     text-decoration: none;
 }
 
-body {
-    background-color: #101728;
-}
 
 .header {
-    padding: 15px;
+    padding: 30px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     background-color: #101728;
     font-family: "Kanit", sans-serif;
-    color: white;
+    color: #F0F8FF;
     height: 60px;
 }
 
 .header-left {
-    margin-left: 150px;
-    font-size: 18px;
+    margin-left: 115px;
+    font-size: 22px;
+    font-weight: bolder;
 }
 
 ul {
     display: flex;
     gap: 20px;
     margin-right: 150px;
+    font-size: 18px;
+}
+
+.first-section {
+    height: 300px;
+    background-color: #151c2c;
+    color: #F0F8FF;
+    display: flex;
+    align-items: center;
+}
+
+.content-left {
+    margin-left: 115px;
+    font-size: 30px;
+    font-family: "Kanit", sans-serif;
 }
 
