--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@
     text-decoration: none;
 }
 
+.header img {
+    margin-top: 10px;
+    margin-left: 120px;
+    height: 170px;
+    width: 170px;
+}
 
 .header {
     padding: 30px;
@@ -28,20 +34,24 @@
 ul {
     display: flex;
     gap: 20px;
-    margin-right: 150px;
+    margin-right: 175px;
     font-size: 18px;
 }
 
+a { 
+    color: inherit; 
+}
+
 .first-section {
-    height: 300px;
+    height: 100vh;
     background-color: #151c2c;
     color: #F0F8FF;
     display: flex;
-    align-items: center;
+    justify-content: center;
 }
 
 .content-left {
-    margin-left: 115px;
+    margin-top: 90px;
     font-size: 30px;
     font-family: "Kanit", sans-serif;
 }
