--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Birthstone&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 *  {
     margin: 0;
@@ -43,16 +43,50 @@ a {
 }
 
 .first-section {
-    height: 100vh;
+    height: 75vh;
     background-color: #151c2c;
     color: #F0F8FF;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
-.content-left {
-    margin-top: 90px;
-    font-size: 30px;
+.text {
+    text-align: center;
     font-family: "Kanit", sans-serif;
+    color: #F0F8FF;
 }
 
+.desc {
+    font-family: "Birthstone", cursive;
+    font-size: 30px;
+}
+
+.pedro {
+    height: 350px;
+    width: 350px;
+    border: #F0F8FF solid;
+    border-radius: 20px;
+}
+
+.second-section {
+    height: 75vh;
+    background-color: #172444;
+}
+
+.second-section .content {
+    color: #F0F8FF;
+    text-align: center;
+    font-family: "Kanit", sans-serif;
+    font-size: 35px;
+    padding-top: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.sobre {
+    margin-top: 100px;
+    font-size: 20px;
+}
