--- a/style.css
+++ b/style.css
@@ -90,3 +90,39 @@ a {
     margin-top: 100px;
     font-size: 20px;
 }
+
+.curriculum {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 50px;
+}
+
+.curriculum a {
+    background-color: #172444;
+    color: white;
+    width: 230px;
+    height: 45px;
+    border-radius: 10px;
+    border: 2px solid white;
+    font-weight: bold;
+    font-size: 18px;
+    text-align: center;
+    font-family: "Kanit", sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.icons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 70px;
+    color: #F0F8FF;
+    gap: 16px;
+    margin-top: 20px;
+}
+
+
