--- a/style.css
+++ b/style.css
@@ -1,128 +1,218 @@
-@import url('https://fonts.googleapis.com/css2?family=Birthstone&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Birthstone&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 
-*  {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-    text-decoration: none;
+* {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  text-decoration: none;
 }
 
 .header img {
-    margin-top: 10px;
-    margin-left: 120px;
-    height: 170px;
-    width: 170px;
+  margin-top: 10px;
+  margin-left: 120px;
+  height: 170px;
+  width: 170px;
 }
 
 .header {
-    padding: 30px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #101728;
-    font-family: "Kanit", sans-serif;
-    color: #F0F8FF;
-    height: 60px;
+  padding: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #101728;
+  font-family: "Kanit", sans-serif;
+  color: #f0f8ff;
+  height: 60px;
+  
 }
+
+
 
 .header-left {
-    margin-left: 115px;
-    font-size: 22px;
-    font-weight: bolder;
+  margin-left: 115px;
+  font-size: 22px;
+  font-weight: bolder;
 }
 
-ul {
-    display: flex;
-    gap: 20px;
-    margin-right: 175px;
-    font-size: 18px;
+.header ul {
+  display: flex;
+  gap: 20px;
+  margin-right: 175px;
+  font-size: 18px;
 }
 
-a { 
-    color: inherit; 
+a {
+  color: inherit;
+  transition: color 0.3s ease;
+}
+
+#sobrebutton:hover , #projetosbutton:hover, #contatobutton:hover {
+  color: #4a6ec4;
 }
 
 .first-section {
-    height: 75vh;
-    background-color: #151c2c;
-    color: #F0F8FF;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  height: 75vh;
+  background-color: #151c2c;
+  color: #f0f8ff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .text {
-    text-align: center;
-    font-family: "Kanit", sans-serif;
-    color: #F0F8FF;
+  text-align: center;
+  font-family: "Kanit", sans-serif;
+  color: #f0f8ff;
 }
 
 .desc {
-    font-family: "Birthstone", cursive;
-    font-size: 30px;
+  font-family: "Birthstone", cursive;
+  font-size: 30px;
 }
 
 .pedro {
-    height: 350px;
-    width: 350px;
-    border: #F0F8FF solid;
-    border-radius: 20px;
+  height: 350px;
+  width: 350px;
+  border: #f0f8ff solid;
+  border-radius: 20px;
 }
 
 .second-section {
-    height: 75vh;
-    background-color: #172444;
+  height: 75vh;
+  background-color: #172444;
 }
 
 .second-section .content {
-    color: #F0F8FF;
-    text-align: center;
-    font-family: "Kanit", sans-serif;
-    font-size: 35px;
-    padding-top: 100px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  color: #f0f8ff;
+  text-align: center;
+  font-family: "Kanit", sans-serif;
+  font-size: 35px;
+  padding-top: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .sobre {
-    margin-top: 100px;
-    font-size: 20px;
+  margin-top: 100px;
+  font-size: 20px;
 }
 
 .curriculum {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 50px;
+
 }
 
+
 .curriculum a {
-    background-color: #172444;
-    color: white;
-    width: 230px;
-    height: 45px;
-    border-radius: 10px;
-    border: 2px solid white;
-    font-weight: bold;
-    font-size: 18px;
-    text-align: center;
-    font-family: "Kanit", sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  background-color: #172444;
+  color: white;
+  width: 230px;
+  height: 45px;
+  border-radius: 10px;
+  border: 2px solid white;
+  font-weight: bold;
+  font-size: 18px;
+  text-align: center;
+  font-family: "Kanit", sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 0.5s ease, color 0.5s ease;
+}
+
+#curriculum-button:hover {
+  background-color: white;
+  color: #172444;
 }
 
 
 .icons {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 70px;
-    color: #F0F8FF;
-    gap: 16px;
-    margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 55px;
+  color: #f0f8ff;
+  gap: 16px;
+  margin-top: 20px;
+  transition: background-color 0.5s ease, color 0.5s ease;
+}
+#linkedin, #github{
+  transition: background-color 0.5s ease, color 0.5s ease;
 }
 
+
+#linkedin:hover, #github:hover {
+  color: #4a6ec4;
+}
+
+.third-section {
+  height: 100vh;
+  background-color: #182c5e;
+}
+
+.third-section .content {
+  color: #f0f8ff;
+  text-align: center;
+  font-family: "Kanit", sans-serif;
+  font-size: 35px;
+  padding-top: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.third-section p {
+  font-size: 20px;
+  margin-top: 50px;
+}
+
+.third-section .blocks {
+  width: 600px;
+  height: 430px;
+  background-color: #f0f8ff;
+  margin-top: 70px;
+  border-radius: 20px;
+  border: solid 4px black;
+  display: flex;
+  flex-direction: column;
+  transition: 0.5s ease;
+  
+}
+
+.third-section .blocks:hover {
+  scale: 1.05;
+}
+
+.third-section h4, #blackjacktext {
+  color: #172444;
+  margin: 0;
+  padding: 0;
+}
+
+#blackjackimg {
+  width: 300px;
+  height: auto;
+  margin-top: 20px;
+  border-radius: 20px;
+  border: solid 2px black;
+}
+
+#tectext {
+  margin-top: 0px;
+  color: #172444;
+}
+
+.third-section ul {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  color: #182c5e;
+}
 
